force-app/main/default/objects/InsurancePolicyParticipant/fields/FinServ__Household__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Household Insurance Policy Participants</relationshipLabel>
    <relationshipName>HouseholdInsurancePolicyParticipants</relationshipName>
    <type>Lookup</type>
</CustomField>