force-app/main/default/objects/InsurancePolicyParticipant/fields/vlocity_ins_fsc__LookupKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__LookupKey__c</fullName>
    <formula>vlocity_ins_fsc__ParticipantName__c + &apos;_&apos; + InsurancePolicy.UniversalPolicyNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lookup Key</label>
    <type>Text</type>
</CustomField>