force-app/main/default/objects/InsurancePolicyParticipant/fields/vlocity_ins_fsc__ParentProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__ParentProductId__c</fullName>
    <formula>InsurancePolicy.ProductId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Product Id</label>
    <type>Text</type>
</CustomField>