force-app/main/default/objects/InsurancePolicyParticipant/fields/vlocity_ins_fsc__ParticipantName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__ParticipantName__c</fullName>
    <label>Participant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>