force-app/main/default/objects/InsurancePolicyParticipant/fields/vlocity_ins_fsc__PremiumAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__PremiumAmount__c</fullName>
    <description>DEPRECATED. Please use StandardPremiumAmount.</description>
    <label>Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>