force-app/main/default/objects/InsurancePolicyParticipant/fields/vlocity_ins_fsc__ProductCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__ProductCode__c</fullName>
    <formula>vlocity_ins_fsc__InsuredPartySpecId__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>