force-app/main/default/objects/InsurancePolicyParticipant/fields/vlocity_ins_fsc__ProratedTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__ProratedTaxAmount__c</fullName>
    <description>DEPRECATED. Please use TermTaxAmount.</description>
    <label>Prorated Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>