force-app/main/default/objects/InsurancePolicyParticipant/fields/ZRH_Banco__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Banco__c</fullName>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
<valueSetDefinition>
            <value>
                <fullName>42</fullName>
                <label>AMERICAN EXPRESS BANK LTD</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>BANCO BCI - TBANC</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>BANCO BICE</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>BANCO CENTRAL DE CHILE</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>BANCO CONSORCIO</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>BANCO DE CHILE</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>BANCO DE LA NACION ARGENTINA</label>
            </value>
            <value>
                <fullName>507</fullName>
                <label>BANCO DEL DESARROLLO</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>BANCO DO BRASIL S.A.</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>BANCO DRESDNER</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>BANCO ESTADO</label>
            </value>
            <value>
                <fullName>38</fullName>
                <label>BANCO EXTERIOR S.A.</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>BANCO FALABELLA</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>BANCO INTERNACIONAL</label>
            </value>
            <value>
                <fullName>39</fullName>
                <label>BANCO ITAU</label>
            </value>
            <value>
                <fullName>57</fullName>
                <label>BANCO PARIS</label>
            </value>
            <value>
                <fullName>56</fullName>
                <label>BANCO PENTA</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>BANCO RIPLEY</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>BANCO SANTANDER</label>
            </value>
            <value>
                <fullName>49</fullName>
                <label>BANCO SECURITY</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>BANK OF AMERICA</label>
            </value>
            <value>
                <fullName>672</fullName>
                <label>COOPEUCH</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>CORP BANCA</label>
            </value>
            <value>
                <fullName>716</fullName>
                <label>CORPORACION FINANCIERA ATLAS</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>DEUTSCHE BANK</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>HSBC BANK (CHILE)</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>JP MORGAN CHASE BANK, N. A.</label>
            </value>
            <value>
                <fullName>54</fullName>
                <label>RABOBANK</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>SCOTIABANK</label>
            </value>
            <value>
                <fullName>999</fullName>
                <label>SERVICIO CAJA SERVIPAG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>