force-app/main/default/objects/InsurancePolicyParticipant/fields/ZRH_Capital__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Capital__c</fullName>
    <label>Capital</label>
    <precision>17</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>