force-app/main/default/objects/InsurancePolicyParticipant/fields/ZRH_CodigoMonedaRenta__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CodigoMonedaRenta__c</fullName>
    <label>Codigo moneda renta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLP</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>UF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>