force-app/main/default/objects/InsurancePolicyParticipant/fields/ZRH_OmitirRequisitosAsegurabilidad__c.field-meta.xml
<CustomField>
    <fullName>ZRH_OmitirRequisitosAsegurabilidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omitir requisitos de asegurabilidad</label>
    <type>Checkbox</type>
</CustomField>