force-app/main/default/objects/InsurancePolicyParticipant/fields/ZRH_Renta__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Renta__c</fullName>
    <label>Renta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>