force-app/main/default/objects/InsurancePolicyParticipant/fields/ZRH_TipoCuentaBancaria__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoCuentaBancaria__c</fullName>
    <label>Tipo de cuenta bancaria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cuenta Corriente</fullName>
            </value>
            <value>
                <fullName>Cuenta Vista</fullName>
            </value>
            <value>
                <fullName>Cuenta Ahorro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>