force-app/main/default/objects/InsurancePolicyParticipant/fields/ZRH_ValorMonedaConversion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ValorMonedaConversion__c</fullName>
    <label>Valor moneda conversion</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>