force-app/main/default/objects/InsurancePolicyParticipant/fields/ZRH_ValorRentaAsegurado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ValorRentaAsegurado__c</fullName>
    <label>Valor renta asegurado</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>